--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -10,13 +10,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8565eb04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ibrah\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5.1+cpu\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.model_selection import train_test_split\n",
+    "from transformers import BertTokenizer\n",
+    "import torch\n",
+    "print(torch.__version__)\n",
+    "from torch.utils.data import DataLoader, TensorDataset"
    ]
   },
   {
@@ -24,12 +44,12 @@
    "id": "f59dae0c",
    "metadata": {},
    "source": [
-    "#### Read the data to pandas DataFrame"
+    "#### Load train data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9a050ec5",
    "metadata": {},
    "outputs": [
@@ -104,7 +124,7 @@
        "4  Thank you so much for the speedy delivery they...           1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,6 +133,82 @@
     "train_df = pd.read_json('Data Samples/train.json')\n",
     "print(train_df.shape)\n",
     "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a96201",
+   "metadata": {},
+   "source": [
+    "### We first need to tokenize the reviews and prepare the data for BERT. \n",
+    "### BERT expects tokenized input in the form of input IDs, attention masks, and possibly token type IDs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a67f041a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the BERT tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "\n",
+    "# Preprocess the reviews\n",
+    "def encode_reviews(reviews, tokenizer, max_length=256):\n",
+    "    return tokenizer.batch_encode_plus(\n",
+    "        reviews, \n",
+    "        add_special_tokens=True,  # Add '[CLS]' and '[SEP]'\n",
+    "        return_attention_mask=True,  # Return attention masks\n",
+    "        padding='max_length',  # Pad to max_length\n",
+    "        truncation=True,  # Truncate longer sequences\n",
+    "        max_length=max_length,  # Maximum length of sequences\n",
+    "        return_tensors='pt'  # Return PyTorch tensors\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c6b64b93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': tensor([[ 101, 7592, 1010, 2129, 2024, 2017, 1029,  102]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BertTokenizer\n",
+    "import torch\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "text = [\"Hello, how are you?\"]\n",
+    "\n",
+    "# Tokenize and check if PyTorch tensors are returned\n",
+    "encoding = tokenizer(text, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "print(encoding)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "855f9508",
+   "metadata": {},
+   "source": [
+    "#### Encode reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4de37952",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_encodings = encode_reviews(train_df['reviews'].tolist(), tokenizer)"
    ]
   },
   {
@@ -127,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "389f70e0",
    "metadata": {},
    "outputs": [
@@ -159,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4f658ff0",
    "metadata": {},
    "outputs": [
@@ -182,9 +278,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ee4414",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ee4414"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -196,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
