--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -10,19 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8565eb04",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ibrah\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5.1+cpu\n"
+      "2.5.1+cu118\n"
      ]
     }
    ],
    "source": [
+    "import os   # Importing the os module to interact with the operating system and manage file paths and directories\n",
     "import pandas as pd     # Importing pandas for data manipulation\n",
     "from sklearn.model_selection import train_test_split    # Importing train_test_split from sklearn for splitting the data into training and validation sets\n",
     "\n",
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e26f2a81",
    "metadata": {},
    "outputs": [
@@ -59,8 +68,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "0\n"
+      "True\n",
+      "1\n"
      ]
     }
    ],
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9a050ec5",
    "metadata": {},
    "outputs": [
@@ -154,7 +163,7 @@
        "4  Thank you so much for the speedy delivery they...           1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "a67f041a",
    "metadata": {},
    "outputs": [],
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "7d28e0e4",
    "metadata": {},
    "outputs": [],
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "fb53edb1",
    "metadata": {},
    "outputs": [],
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "d401db5e",
    "metadata": {},
    "outputs": [],
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "67c61d96",
    "metadata": {},
    "outputs": [],
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "afc4c7d3",
    "metadata": {},
    "outputs": [
@@ -353,7 +362,7 @@
        ")"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,20 +385,48 @@
    "id": "9d4f8dd7",
    "metadata": {},
    "source": [
-    "#### Step 5: Set Up Optimizer and Training Loop"
+    "#### Step 5: Set Up Optimizer and Training Loop\n",
+    "\n",
+    "##### Set the number of epochs according to the size of your dataset.\n",
+    "##### For example, \n",
+    "##### - Small Datasets (Typically around 1,000 to 10,000 samples): 3-5\n",
+    "##### - Medium to Large Datasets (Typically around 10,000 to 500,000 samples): 2-3\n",
+    "##### - Very Large Datasets (Typically 500,000 samples or more): 1-2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a036d690",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ibrah\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\transformers\\optimization.py:591: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training loss for epoch 1: 0.21\n"
+      "Starting epoch 1\n",
+      "Average training loss for epoch 1: 0.21\n",
+      "Validation loss for epoch 1: 0.17\n",
+      "Starting epoch 2\n",
+      "Average training loss for epoch 2: 0.09\n",
+      "Validation loss for epoch 2: 0.12\n",
+      "Starting epoch 3\n",
+      "Average training loss for epoch 3: 0.06\n",
+      "Validation loss for epoch 3: 0.24\n",
+      "Starting epoch 4\n",
+      "Average training loss for epoch 4: 0.03\n",
+      "Validation loss for epoch 4: 0.16\n",
+      "Starting epoch 5\n",
+      "Average training loss for epoch 5: 0.02\n",
+      "Validation loss for epoch 5: 0.24\n"
      ]
     }
    ],
@@ -398,11 +435,12 @@
     "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)    # AdamW is an optimization algorithm, widely used for training transformer-based models like BERT\n",
     "\n",
     "# Training Loop\n",
-    "epochs = 1  # Number of training epochs, i.e., how many times the entire training dataset is passed through the model\n",
+    "epochs = 5  # Number of training epochs, i.e., how many times the entire training dataset is passed through the model\n",
     "            # Adjust this value to change the number of iterations the model will train for\n",
     "\n",
     "# Training\n",
     "for epoch in range(epochs):\n",
+    "    print(f\"Starting epoch {epoch + 1}\")\n",
     "    \n",
     "    # Set the model to training mode (enables features like dropout)\n",
     "    model.train()\n",
@@ -452,7 +490,69 @@
     "\n",
     "    # Calculate the average validation loss for the epoch\n",
     "    avg_val_loss = total_val_loss / len(val_dataloader)\n",
-    "    print(f\"Validation loss for epoch {epochs + 1}: {avg_val_loss:.2f}\")"
+    "    print(f\"Validation loss for epoch {epoch + 1}: {avg_val_loss:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1e7d257",
+   "metadata": {},
+   "source": [
+    "#### Save the model into the 'Models' folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b29e2452",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 'Models' folder already exists.\n",
+      "The model file 'Models\\bert_sentiment_model.pt' already exists. It will be updated.\n",
+      "The tokenizer configuration at 'Models\\tokenizer' already exists. It will be updated.\n",
+      "Model has been saved to Models\\bert_sentiment_model.pt\n",
+      "Tokenizer has been saved to Models\\tokenizer\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 6: Create the \"Models\" folder if it doesn't exist\n",
+    "if not os.path.exists('Models'):\n",
+    "    os.makedirs('Models')\n",
+    "    print(\"The 'Models' folder has been created.\")\n",
+    "else:\n",
+    "    print(\"The 'Models' folder already exists.\")\n",
+    "\n",
+    "# Step 7: Define the path for saving the model\n",
+    "model_save_path = os.path.join('Models', 'bert_sentiment_model.pt')\n",
+    "\n",
+    "# Check if the model file already exists\n",
+    "if os.path.exists(model_save_path):\n",
+    "    print(f\"The model file '{model_save_path}' already exists. It will be updated.\")\n",
+    "else:\n",
+    "    print(f\"The model file '{model_save_path}' does not exist and will be created.\")\n",
+    "\n",
+    "# Step 8: Save the model's state dictionary\n",
+    "torch.save(model.state_dict(), model_save_path)\n",
+    "\n",
+    "# Optional: Save the tokenizer configuration if needed for reloading the model\n",
+    "tokenizer_save_path = os.path.join('Models', 'tokenizer')\n",
+    "\n",
+    "# Check if the tokenizer directory already exists\n",
+    "if os.path.exists(tokenizer_save_path):\n",
+    "    print(f\"The tokenizer configuration at '{tokenizer_save_path}' already exists. It will be updated.\")\n",
+    "else:\n",
+    "    print(f\"The tokenizer configuration at '{tokenizer_save_path}' does not exist and will be created.\")\n",
+    "    \n",
+    "tokenizer.save_pretrained(tokenizer_save_path)\n",
+    "\n",
+    "# Confirmation message\n",
+    "print(f\"Model has been saved to {model_save_path}\")\n",
+    "print(f\"Tokenizer has been saved to {tokenizer_save_path}\")"
    ]
   },
   {
@@ -473,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "4f658ff0",
    "metadata": {},
    "outputs": [
@@ -542,7 +642,7 @@
        "4  These are truly wrinkle free and longer than t..."
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1673ae7d",
    "metadata": {},
    "outputs": [],
@@ -583,12 +683,12 @@
    "id": "2a884251",
    "metadata": {},
    "source": [
-    "#### Step 3: Prepare the Test DataLoader"
+    "#### Prepare the Test DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "fd5034fb",
    "metadata": {},
    "outputs": [],
@@ -612,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "b8420a47",
    "metadata": {},
    "outputs": [
@@ -665,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "04afc8d3",
    "metadata": {},
    "outputs": [
@@ -673,24 +773,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The 'Results' folder already exists.\n",
+      "The file 'submission.csv' already exists. It will be updated with new data.\n",
       "Predictions have been saved to Results\\submission.csv\n"
      ]
     }
    ],
    "source": [
-    "# Importing the os module to interact with the operating system and manage file paths and directories\n",
-    "import os\n",
-    "\n",
     "# Step 6: Create the \"Results\" folder if it doesn't exist\n",
     "if not os.path.exists('Results'):\n",
     "    os.makedirs('Results')\n",
+    "    print(\"The 'Results' folder has been created.\")\n",
+    "else:\n",
+    "    print(\"The 'Results' folder already exists.\")\n",
     "\n",
     "# Step 7: Save the test dataframe with predictions to 'submission.csv'\n",
     "submission_file = os.path.join('Results', 'submission.csv')\n",
+    "\n",
+    "# Check if the submission file already exists\n",
+    "if os.path.exists(submission_file):\n",
+    "    print(\"The file 'submission.csv' already exists. It will be updated with new data.\")\n",
+    "else:\n",
+    "    print(\"The file 'submission.csv' does not exist and will be created.\")\n",
+    "    \n",
     "test_df.to_csv(submission_file, index=False)\n",
     "\n",
     "# Confirm the file has been saved\n",
     "print(f\"Predictions have been saved to {submission_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "203790ad",
+   "metadata": {},
+   "source": [
+    "#### If you would like to reload the saved model and tokenizer for inference or fine-tuning on another dataset, use the following code (Select All and Uncomment). \n",
+    "#### This will load the model weights from the saved state dictionary and configure the tokenizer to match the settings used during training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "58d5de9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Step 1: Define paths to the model and tokenizer\n",
+    "# model_load_path = 'Models/bert_sentiment_model.pt'\n",
+    "# tokenizer_load_path = 'Models/tokenizer'\n",
+    "\n",
+    "# # Step 2: Check if model and tokenizer paths exist, and load them if available\n",
+    "# if os.path.exists(model_load_path) and os.path.exists(tokenizer_load_path):\n",
+    "#     print(\"Found model and tokenizer files. Proceeding to load them.\")\n",
+    "    \n",
+    "#     # Reload the tokenizer from the saved configuration\n",
+    "#     tokenizer = BertTokenizer.from_pretrained(tokenizer_load_path)\n",
+    "#     print(\"Tokenizer loaded successfully.\")\n",
+    "    \n",
+    "#     # Step 3: Reload the model with the same architecture and load the saved state\n",
+    "#     model = DistilBertForSequenceClassification.from_pretrained(\n",
+    "#         'distilbert-base-uncased', \n",
+    "#         num_labels=2\n",
+    "#     )\n",
+    "    \n",
+    "#     # Load the state dictionary into the model\n",
+    "#     model.load_state_dict(torch.load(model_load_path))\n",
+    "#     print(\"Model loaded successfully.\")\n",
+    "    \n",
+    "#     # Step 4: Send the model to GPU if available\n",
+    "#     device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "#     model.to(device)\n",
+    "    \n",
+    "#     # Set the model to evaluation mode (disables dropout layers)\n",
+    "#     model.eval()\n",
+    "    \n",
+    "#     print(\"Model and tokenizer successfully loaded for inference.\")\n",
+    "# else:\n",
+    "#     if not os.path.exists(model_load_path):\n",
+    "#         print(f\"Model file '{model_load_path}' not found.\")\n",
+    "#     if not os.path.exists(tokenizer_load_path):\n",
+    "#         print(f\"Tokenizer configuration '{tokenizer_load_path}' not found.\")\n",
+    "#     print(\"Please ensure both model and tokenizer files are available in the 'Models' folder before running this code.\")"
    ]
   }
  ],
