Changed epochs to 3 from 5

--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -216,7 +216,7 @@
    "id": "855f9508",
    "metadata": {},
    "source": [
-    "#### Encode reviews"
+    "#### Encode reviews and Prepare Labels"
    ]
   },
   {
@@ -226,24 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_encodings = encode_reviews(train_df['reviews'].tolist(), tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b01c7ef4",
-   "metadata": {},
-   "source": [
-    "#### Step 1: Prepare Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fb53edb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "train_encodings = encode_reviews(train_df['reviews'].tolist(), tokenizer)\n",
+    "\n",
     "# Step 1: Prepare Labels\n",
     "labels = torch.tensor(train_df['sentiments'].values)"
    ]
@@ -258,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d401db5e",
    "metadata": {},
    "outputs": [],
@@ -282,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "67c61d96",
    "metadata": {},
    "outputs": [],
@@ -311,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "afc4c7d3",
    "metadata": {},
    "outputs": [
@@ -362,7 +346,7 @@
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a036d690",
    "metadata": {},
    "outputs": [
@@ -414,19 +398,13 @@
      "text": [
       "Starting epoch 1\n",
       "Average training loss for epoch 1: 0.21\n",
-      "Validation loss for epoch 1: 0.17\n",
+      "Validation loss for epoch 1: 0.14\n",
       "Starting epoch 2\n",
       "Average training loss for epoch 2: 0.09\n",
-      "Validation loss for epoch 2: 0.12\n",
+      "Validation loss for epoch 2: 0.15\n",
       "Starting epoch 3\n",
-      "Average training loss for epoch 3: 0.06\n",
-      "Validation loss for epoch 3: 0.24\n",
-      "Starting epoch 4\n",
-      "Average training loss for epoch 4: 0.03\n",
-      "Validation loss for epoch 4: 0.16\n",
-      "Starting epoch 5\n",
-      "Average training loss for epoch 5: 0.02\n",
-      "Validation loss for epoch 5: 0.24\n"
+      "Average training loss for epoch 3: 0.04\n",
+      "Validation loss for epoch 3: 0.21\n"
      ]
     }
    ],
@@ -435,7 +413,7 @@
     "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)    # AdamW is an optimization algorithm, widely used for training transformer-based models like BERT\n",
     "\n",
     "# Training Loop\n",
-    "epochs = 5  # Number of training epochs, i.e., how many times the entire training dataset is passed through the model\n",
+    "epochs = 3  # Number of training epochs, i.e., how many times the entire training dataset is passed through the model\n",
     "            # Adjust this value to change the number of iterations the model will train for\n",
     "\n",
     "# Training\n",
@@ -503,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b29e2452",
    "metadata": {},
    "outputs": [
@@ -573,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "4f658ff0",
    "metadata": {},
    "outputs": [
@@ -642,7 +620,7 @@
        "4  These are truly wrinkle free and longer than t..."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1673ae7d",
    "metadata": {},
    "outputs": [],
@@ -688,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "fd5034fb",
    "metadata": {},
    "outputs": [],
@@ -712,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b8420a47",
    "metadata": {},
    "outputs": [
@@ -765,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "04afc8d3",
    "metadata": {},
    "outputs": [
@@ -813,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "58d5de9e",
    "metadata": {},
    "outputs": [],
