--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8565eb04",
    "metadata": {},
    "outputs": [
@@ -34,6 +34,8 @@
     "import os   # Importing the os module to interact with the operating system and manage file paths and directories\n",
     "import pandas as pd     # Importing pandas for data manipulation\n",
     "from sklearn.model_selection import train_test_split    # Importing train_test_split from sklearn for splitting the data into training and validation sets\n",
+    "import numpy as np\n",
+    "import random\n",
     "\n",
     "# Importing the BERT tokenizer to convert text reviews into token IDs suitable for BERT\n",
     "# Importing AdamW as the optimizer for training BERT models, which includes weight decay for regularization\n",
@@ -76,6 +78,31 @@
    "source": [
     "print(torch.cuda.is_available())  # Should return True if CUDA is available\n",
     "print(torch.cuda.device_count())  # Should be > 0 if CUDA is enabled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ensure reproducibility by fixing a random seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1787e400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fix random seed\n",
+    "random_seed = 42\n",
+    "torch.manual_seed(random_seed)\n",
+    "np.random.seed(random_seed)\n",
+    "random.seed(random_seed)\n",
+    "\n",
+    "# Ensure reproducibility on GPU\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed_all(random_seed)"
    ]
   },
   {
@@ -380,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a036d690",
    "metadata": {},
    "outputs": [
@@ -413,8 +440,7 @@
     "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)    # AdamW is an optimization algorithm, widely used for training transformer-based models like BERT\n",
     "\n",
     "# Training Loop\n",
-    "epochs = 3  # Number of training epochs, i.e., how many times the entire training dataset is passed through the model\n",
-    "            # Adjust this value to change the number of iterations the model will train for\n",
+    "epochs = 3  \n",
     "\n",
     "# Training\n",
     "for epoch in range(epochs):\n",
